# Clippy-Kernel

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLIPPY_KERNEL_DEVELOPER_GUIDE.md  CLIPPY_SWE_AGENT_GUIDE.md  CLIPPY_SWE_ENHANCED.md  CLIPPY_SWE_EVALS.md  CLIPPY_SWE_VALIDATION.md  COPILOT_SDK_INTEGRATION.md  FEATURE_PARITY_MATRIX.md  IMPLEMENTATION_SUMMARY.md  MODERNIZATION_SHOWCASE.md  QUICKSTART_SWE.md  README.md  README_WINDOWS_CLIPPY_MCP.md  RELEASE_NOTES_v1.0.1.md  UPGRADE_SUMMARY.md  pyproject.toml  test_clippy_swe.py  validate_clippy_swe.py
clippy/: .gitignore  Architecture.md  README.md  mkdocs.yml  mlc_config.json  pyproject.toml
clippy/.devcontainer/: bashrc_epilog.sh  devcontainer.json
clippy/.github/: copilot-instructions.md
clippy/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  question.yml
clippy/.github/workflows/: pytest.yaml
clippy/clippyagent/: __init__.py  __main__.py  exceptions.py  types.py
clippy/clippyagent/agent/: action_sampler.py  agents.py  copilot_sdk_config.py  history_processors.py  models.py  problem_statement.py  reviewer.py
clippy/clippyagent/agent/extra/: shell_agent.py
clippy/clippyagent/agent/hooks/: abstract.py  status.py
clippy/clippyagent/environment/: repo.py  swe_env.py
clippy/clippyagent/environment/hooks/: abstract.py  status.py
clippy/clippyagent/inspector/: README.md  server.py  static.py
clippy/clippyagent/run/: _progress.py  batch_instances.py  common.py  compare_runs.py  inspector_cli.py  merge_predictions.py  quick_stats.py  remove_unfinished.py  run.py  run_batch.py  run_replay.py  run_shell.py  run_single.py  run_traj_to_demo.py
clippy/clippyagent/run/hooks/: abstract.py  apply_patch.py  open_pr.py  swe_bench_evaluate.py
clippy/clippyagent/tools/: bundle.py  commands.py  parsing.py  tools.py  utils.py
clippy/clippyagent/utils/: config.py  github.py  jinja_warnings.py  log.py
clippy/clippybot/: __init__.py  _compat.py  exceptions.py  types.py
clippy/clippybot/agent/: __init__.py
clippy/clippybot/agentchat/: __init__.py  copilot_agents.py
clippy/clippybot/agents/: __init__.py
clippy/clippybot/agents/cs_builder/: README.md  __init__.py  _base.py  actions.py  analytics.py  ingestor.py  planner.py  publisher.py  scaffolder.py  security.py
clippy/clippybot/environment/: clippybot_env.py  repo.py
clippy/clippybot/environment/hooks/: abstract.py  status.py
clippy/clippybot/llm_clients/: __init__.py  copilot_client.py
clippy/clippybot/run/: __init__.py
clippy/clippybot/specs/: agent_spec.example.json  agent_spec.schema.json
clippy/clippybot/swarms/: __init__.py  cs_builder.py
clippy/clippybot/swe/: __init__.py  agent.py  environment.py  swarms.py  tools.py
clippy/clippybot/tools/: __init__.py  adaptive_cards.py  bundle.py  commands.py  dataverse_api.py  flow_definitions.py  pac_cli.py  parsing.py  sharepoint_check.py  teams_publish.py  tools.py  utils.py
clippy/clippybot/utils/: __init__.py
clippy/config/: README.md  coding_challenge.yaml  copilot_sdk.yaml  default_mm_no_images.yaml  default_mm_with_images.yaml
clippy/config/demo/: default.yaml  no_instructions.yaml  only_bash.yaml
clippy/config/exotic/: default_shell.yaml
clippy/config/sweagent_0_7/: 07.yaml  07_fcalling.yaml  07_from_url.yaml  07_thought_action.yaml  07_thought_action_xml.yaml
clippy/copilot-sdk-main/copilot-sdk/: justfile
clippy/copilot-sdk-main/copilot-sdk/.github/agents/: upgrade-agentic-workflows.md
clippy/copilot-sdk-main/copilot-sdk/.github/workflows/: copilot-setup-steps.yml  dotnet-sdk-tests.yml  go-sdk-tests.yml
clippy/copilot-sdk-main/copilot-sdk/cookbook/: README.md
clippy/copilot-sdk-main/copilot-sdk/docs/: getting-started.md
clippy/copilot-sdk-main/copilot-sdk/go/: client_test.go  go.mod  test.sh
clippy/copilot-sdk-main/copilot-sdk/nodejs/: package-lock.json  package.json  tsconfig.json
clippy/copilot-sdk-main/copilot-sdk/python/: README.md  pyproject.toml  setup.py  test-requirements.txt
clippy/docs/: README.md  _footer.md  cs_builder_usage.md  faq.md  index.md
clippy/docs/background/: aci.md  architecture.md  index.md
clippy/docs/config/: demonstrations.md  env.md  environments.md  index.md  models.md  tools.md
clippy/docs/dev/: contribute.md  formatting_conflicts.md  vscode_settings.json
clippy/docs/installation/: changelog.md  codespaces.md  index.md  keys.md  migration.md  source.md  tips.md
clippy/docs/overrides/: main.html
clippy/docs/reference/: agent.md  agent_config.md  batch_instances.md  bundle_config.md  env.md  env_config.md  exceptions.md  history_processor_config.md  index.md  model_config.md  parsers.md  problem_statements.md  repo.md  run_batch_config.md  run_single_config.md  template_config.md  tools_config.md
clippy/docs/usage/: adding_custom_tools.md  batch_mode.md  cl_tutorial.md  cli.md  coding_challenges.md  competitive_runs.md  hello_world.md  hello_world_output.txt  index.md  inspector.md  multimodal.md  trajectories.md  whats_next.md
clippy/tests/: conftest.py  test_agent.py  test_batch_instance.py  test_cs_builder_integration.py  test_env.py  test_env_utils.py  test_history_processors.py  test_legacy_compatibility.py  test_models.py  test_packaging.py  test_parsing.py  test_problem_statement_multimodal.py  test_quick_stats.py  test_run.py  test_run_batch.py  test_run_hooks.py  test_run_replay.py  test_run_single.py  test_tools_command_parsing.py  test_utils.py
clippy/tests/agents/cs_builder/: conftest.py  test_actions.py  test_adaptive_cards.py  test_agent_cards.py  test_agent_llm_integration.py  test_analytics.py  test_flow_definitions.py  test_graph_api.py  test_ingestor.py  test_integration.py  test_planner.py  test_publisher.py  test_scaffolder.py  test_security.py  test_teams_manifest.py  test_tools.py
clippy/tests/test_data/data_sources/: human_eval.json  swe-bench-dev-easy.json  swe-bench-dev-easy_first_only.json
clippy/tests/tools/: conftest.py  test_default_utils.py
clippy/tools/edit_anthropic/: install.sh
clippy/tools/windowed/lib/: flake8_utils.py  windowed_file.py
(+126 files in other folders)
